Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17871

FLOCK ownlocks may be not set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      Fixes LUS-10623/ LU-15402 ldlm: speedup RD flock enqueue

      The fix helps to avoid following kernel panic:

      [1751308.091508] LustreError: 19554:0:(ldlm_flock.c:234:ldlm_flock_deadlock()) ASSERTION( req != lock ) failed: 
      [1751308.095644] LustreError: 19554:0:(ldlm_flock.c:234:ldlm_flock_deadlock()) LBUG 
      [1751308.097405] Pid: 19554, comm: mdt03_004 4.18.0-477.27.1.el8_lustre.ddn17.x86_64 #1 SMP Tue Apr 9 21:59:53 UTC 2024 
      [1751308.101036] Call Trace TBD: 
      [1751308.102285] [<0>] libcfs_call_trace+0x6f/0xa0 [libcfs]
      [1751308.103518] [<0>] lbug_with_loc+0x3f/0x70 [libcfs]
      [1751308.104824] [<0>] ldlm_flock_deadlock.isra.10+0x1b4/0x200 [ptlrpc]
      [1751308.106324] [<0>] ldlm_process_flock_lock+0x287/0x1ee0 [ptlrpc]
      [1751308.107768] [<0>] ldlm_lock_enqueue+0x253/0xaa0 [ptlrpc]
      [1751308.109024] [<0>] ldlm_handle_enqueue0+0x61a/0x16d0 [ptlrpc]
      [1751308.110340] [<0>] tgt_enqueue+0xa4/0x200 [ptlrpc]
      [1751308.111507] [<0>] tgt_request_handle+0xc9c/0x1960 [ptlrpc]
      [1751308.112820] [<0>] ptlrpc_server_handle_request+0x323/0xbd0 [ptlrpc]
      [1751308.114266] [<0>] ptlrpc_main+0xbf7/0x1510 [ptlrpc]
      [1751308.115445] [<0>] kthread+0x134/0x150
      [1751308.116363] [<0>] ret_from_fork+0x1f/0x40
      [1751308.117393] Kernel panic - not syncing: LBUG  

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: