lustre/ldlm/ldlm_flock.c
@@ -377,6 +377,7 @@ reprocess:
 #ifdef HAVE_SERVER_SUPPORT
 	else {
 		int reprocess_failed = 0;
+		int pr_matched = 0;
 
 		lockmode_verify(mode);
 
@@ -385,8 +386,11 @@ reprocess:
 		 */
 		list_for_each_entry(lock, &res->lr_granted, l_res_link) {
 			if (ldlm_same_flock_owner(lock, req)) {
-				if (!ownlocks)
+				if (!ownlocks) {
 					ownlocks = lock;
+					if (pr_matched)
+						break;
+				}
 				continue;
 			}
 
@@ -397,7 +401,10 @@ reprocess:
 			    lock->l_policy_data.l_flock.end >=
 				req->l_policy_data.l_flock.end) {
 				/* there can't be granted WR lock */
-				break;
+				if (ownlocks)
+					break;
+				pr_matched = 1;
+				continue;
 			}
 			/* locks are compatible, overlap doesn't matter */
 			if (lockmode_compat(lock->l_granted_mode, mode))
